use file uri to get path instead of handling different file system ourselves